tests/chapter_18/invalid_types/initializers/initialize_static_struct_with_zero.c
struct s {
    int a;
};

// you can't initialize a static struct with a scalar expression, not even 0
struct s x = 0;